--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -25,7 +25,6 @@ parts:
   nagios-core:
     source: https://github.com/NagiosEnterprises/nagioscore/releases/download/nagios-4.4.6/nagios-4.4.6.tar.gz
     plugin: autotools
-
     override-build: |
         ./configure --prefix=$SNAP_COMMON/usr/local --with-httpd-conf=/etc/apache2/sites-enabled
         make all
@@ -37,7 +36,7 @@ parts:
         make install-webconf
         a2enmod cgi
         a2enmod rewrite
-        htpasswd -bc /usr/local/nagios/etc/htpasswd.users nagiosadmin nagiosadmin
+        htpasswd -bc $SNAP_COMMON/usr/local/nagios/etc/htpasswd.users nagiosadmin nagiosadmin
         systemctl restart apache2.service
     build-packages: [autoconf, gcc, libc6, make, wget, unzip, apache2, php, libapache2-mod-php7.4, libgd-dev]
     stage-packages: [wget, unzip, apache2, php, libapache2-mod-php7.4, libgd-dev]
